--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@
 				<b>Hospitality:</b> Coordinates all catering and hospitality efforts for the artist.
 			</p>
 			<p>	
-				<b>Stage & Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
+				<b>Stage and Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
 				for load-in and load-out of artist equipment.
 			</p>
 			<p>
 				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show. 
 			</p>
 			<p>
-				<b>House and Event Services:</b> Front of house staffing for day of show responsibilities including ushers, ticket takers, door guards,
+				<b>House and Event Services:</b> Front of house staffing including ushers, ticket takers, door guards,
 				and assistants to merchandise vendors. 
 			</p>
 		</div>
