--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 			<br><br>
 			<h3 class="text-center">DAY OF SHOW</h3>
 			<p>	
-				<b>Hospitality:</b> Coordinates all catering and hospitality efforts for the artist.
+				<b>Hospitality:</b> Arranges all catering and hospitality efforts for the artist.
 			</p>
 			<p>	
 				<b>Stage and Production:</b> Staffs backstage, production hand, and security positions. Works with venue and production crews 
@@ -330,7 +330,7 @@
 				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show. 
 			</p>
 			<p>
-				<b>House and Event Services:</b> Front of house staffing including ushers, ticket takers, door guards,
+				<b>House and Event Services:</b> Coordinates front of house staffing including ushers, ticket takers, door guards,
 				and assistants to merchandise vendors. 
 			</p>
 		</div>
