--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- meta og:x tags are for Facebook -->
 	<meta property="og:title" content="Star Course UIUC"/>
-	<!-- <meta property="og:type" content="website"/> -->
+	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="http://star-course.com"/> 
-	<!-- TODO: Change image for link shared on Facebook -->
+	<!-- TODO: Change link to image for link shared on Facebook -->
 	<meta property="og:image" content="https://github.com/starcourse/starcourse.github.com/blob/master/website_icon.jpg?raw=true"/>
 	<meta property="og:image:width" content="1200"/>
 	<meta property="og:image:height" content="630"/>
 	<meta property="og:description" content="Star Course is a live-concert promotion and production organization 
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
 		in all levels of event planning to contract, promote, and stage campus entertainment.">
+	<!-- meta name tags are for search engines -->
+	<meta name="title" content="Star Course UIUC">
+	<meta name="description" content="Star Course is a student-run concert promotion and production organization 
+		at the University of Illinois at Urbana-Champaign.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Star Course is a live-concert promotion and production organization 
-		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
-		in all levels of event planning to contract, promote, and stage campus entertainment.">
-	<meta name="author" content="">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
 	<title>Star Course UIUC</title>
 	<!-- Bootstrap Core CSS -->
