--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 				for load-in and load-out of artist equipment.
 			</p>
 			<p>
-				<b>Tickets:</b> Manages ticket sales, lottery, and comps distribution. Collects and sells tickets on the day of show. 
+				<b>Tickets:</b> Manages ticket sales and comps distribution with the event venue. Collects and sells tickets on the day of show. 
 			</p>
 			<p>
 				<b>House and Event Services:</b> Coordinates front of house staffing including ushers, ticket takers, door guards,
