--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
 				and Junior Managers direct staff through each phase of show preparation, marketing, and production.
 			</p>
 			<p>
-				<b>Experience:</b> Star Course members are required to participate in both non-day of show and day of show activies. All members will assist
+				<b>Experience:</b> Star Course members are required to participate in both non-day of show and day of show activities. All members will assist
 				with the Marketing committee in the weeks leading up to a show and will also have the option of working with either the Tickets or Stage & Production 
 				committees for the day of show. Star Course is devoted to providing a student learning opportunity for members about the inner workings
-				of the music industy.
+				of the music industry.
 			</p>
 			<p>
 				<b>Committment:</b> Staff members should be prepared for all-staff meetings, committee meetings, and regular member events. Show dates vary 
