--- a/index.html
+++ b/index.html
@@ -94,10 +94,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h1 class="brand-heading">STAR COURSE</h1>
-				<p class="intro-text">
-					University of Illinois, est. 1892
-				</p>
+				<img src="img/sc%20logo%20white.png" height="250"><br>
 				<a href="#events" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
 				</a>
@@ -113,7 +110,29 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p>
+			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
+			<img height="550" src="img/posters/Joywave%20Flyer.png"/>
+			<p>
+				<br>Star Course presents...<br>
+				<b>JOYWAVE</b><br>
+				<br>
+				<b>Wednesday October 11th, 2017<br></b>
+				Doors 6:30pm | Show 7:30pm<br>
+				Students $10 | Public $15<br>
+				<br>
+				<b>Foellinger Auditorium</b><br>
+				709 S Mathews Ave<br>
+				Urbana, IL 61801<br>
+				<br>
+				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE17%3A1011%3AS05&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc=" 
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1011%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+				<!-- <a href="#" class="btnghost"><i class="fa fa-facebook"></i> Event Info</a><br> -->
+			</p>
+			<hr style="border-top: dotted 1px;"/><br><br>
+			<h3>GET INVOLVED</h3>
+			<img src="img/SC%20Info%20Flyer.png"/>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
