--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<img src="img/sc%20logo%20white.png" height="250"><br>
+				<img src="img/sc%20full%20text%20logo%20white.png" height="250"><br>
 				<a href="#events" class="btn btn-circle page-scroll">
 				<i class="fa fa-angle-double-down animated"></i>
 				</a>
