--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-			<![endif]-->
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 	<!-- TODO: Set favicon (browser tab icon) -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
@@ -111,7 +111,7 @@
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
 			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
-			<img height="550" src="img/posters/Joywave%20Flyer.png"/>
+			<img height="50%" width="50%" src="img/posters/Joywave%20Flyer.png"/>
 			<p>
 				<br>Star Course presents...<br>
 				<b>JOYWAVE</b><br>
@@ -138,16 +138,16 @@
 			<script>
 				// JavaScript for "Click to hide/show" button
 				function showPosters() {
-	   			var x = document.getElementById('posters');
-    			if (x.style.display == 'none') {	
-        		x.style.display = 'block';
+	   				var x = document.getElementById('posters');
+    					if (x.style.display == 'none') {	
+        					x.style.display = 'block';
 						document.getElementById("posterButtonI").className = "fa fa-caret-up fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to hide";
-    			} else {
-        		x.style.display = 'none';
+    					} else {
+        					x.style.display = 'none';
 						document.getElementById("posterButtonI").className = "fa fa-caret-down fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to show";
-    			}
+    					}
 				}
 			</script>
 			<p>
