--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- meta name tags are for search engines -->
 	<meta name="title" content="Star Course UIUC">
 	<meta name="description" content="Star Course is a student-run concert promotion and production organization 
-		at the University of Illinois at Urbana-Champaign.">
+		at the University of Illinois at Urbana-Champaign. Star Course presents Joywave on October 11th at Foellinger Auditorium.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
 	<title>Star Course UIUC</title>
