--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- meta name tags are for search engines -->
 	<meta name="title" content="Star Course UIUC">
 	<meta name="description" content="Star Course is a student-run concert promotion and production organization 
-		at the University of Illinois at Urbana-Champaign. Star Course presents Joywave on October 11th at Foellinger Auditorium.">
+		at the University of Illinois at Urbana-Champaign.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
 	<title>Star Course UIUC</title>
@@ -130,7 +130,7 @@
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1011%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<a href="https://www.facebook.com/events/1897318827185199" class="btnghost"><i class="fa fa-facebook"></i> Event Info</a><br>
+				<a href="https://www.facebook.com/events/1897318827185199" class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Info</a><br>
 			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>GET INVOLVED</h3>
