--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1011%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<a href="https://www.facebook.com/events/1897318827185199" class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Info</a><br>
+				<a href="https://www.facebook.com/events/1897318827185199" 
+				   	class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>GET INVOLVED</h3>
