--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 				<br>Star Course presents...<br>
 				<b>JOYWAVE</b><br>
 				<br>
+				with opener <i><a href="https://www.facebook.com/stewartarp/" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
+				<br>
 				<b>Wednesday October 11th, 2017<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
 				Students $10 | Public $15<br>
