--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<br>Star Course presents...<br>
 				<b>JOYWAVE</b><br>
 				<br>
-				with opener <i><a href="https://www.facebook.com/stewartarp/" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
+				with opener <i><a href="https://www.facebook.com/stewartarp/" target="_blank" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
 				<br>
 				<b>Wednesday October 11th, 2017<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
@@ -148,7 +148,8 @@
 				709 S Mathews Ave<br>
 				Urbana, IL 61801<br>
 				<br>
-				Applicable online fees may apply.<br>
+				Applicable fees may apply for online orders.<br> 
+				Fee-free tickets will be available at the door on day of show.<br>
 				Foellinger Auditorium is reserved seating only.<br>
 				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE17%3A1011%3AS05&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc=" 
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
