--- a/index.html
+++ b/index.html
@@ -33,33 +33,11 @@
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
+					<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+					<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+			<![endif]-->
 	<!-- TODO: Set favicon (browser tab icon) -->
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
-	<!-- Code for targeted advertising -->
-	<script type="text/javascript">
-    		adroll_adv_id = "P6CL5KOF5VG5PKBXKHNTEI";
-    		adroll_pix_id = "R6C5RUNI6FG3DFGXJ3PPE2";
-    		/* OPTIONAL: provide email to improve user identification */
-		/* adroll_email = "username@example.com"; */
-		(function () {
-			var _onload = function(){
-				if (document.readyState && !/loaded|complete/.test(document.readyState)){setTimeout(_onload, 10);return}
-			    	if (!window.__adroll_loaded){__adroll_loaded=true;setTimeout(_onload, 50);return}
-			    	var scr = document.createElement("script");
-			    	var host = (("https:" == document.location.protocol) ? "https://s.adroll.com" : "http://a.adroll.com");
-			    	scr.setAttribute('async', 'true');
-			    	scr.type = "text/javascript";
-			    	scr.src = host + "/j/roundtrip.js";
-			    	((document.getElementsByTagName('head') || [null])[0] ||
-					document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
-			};
-			if (window.addEventListener) {window.addEventListener('load', _onload, false);}
-			else {window.attachEvent('onload', _onload)}
-		}());
-	</script>
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 <!-- Navigation -->
@@ -132,13 +110,16 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
+			<p>Stay tuned for our next show announcement!</p>
+			<hr style="border-top: dotted 1px;"/><br><br>
+			<!--<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
+			<!--
 			<img height="50%" width="50%" src="img/posters/joywave_poster.png"/>
 			<p>
 				<br>Star Course presents...<br>
 				<b>JOYWAVE</b><br>
 				<br>
-				with opener <i><a href="https://www.facebook.com/stewartarp/" target="_blank" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
+				with opener <i><a href="https://www.facebook.com/stewartarp/" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
 				<br>
 				<b>Wednesday October 11th, 2017<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
@@ -148,20 +129,17 @@
 				709 S Mathews Ave<br>
 				Urbana, IL 61801<br>
 				<br>
-				Applicable fees may apply for online orders.<br> 
-				Fee-free tickets will be available at the door on day of show.<br>
+				Applicable online fees may apply.<br>
 				Foellinger Auditorium is reserved seating only.<br>
 				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE17%3A1011%3AS05&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc=" 
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1011%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
 				<a href="https://www.facebook.com/events/1897318827185199" 
-				   	class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
+					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
-			<h3>GET INVOLVED</h3>
-			<img src="img/SC%20Info%20Flyer.png"/>
-			<hr style="border-top: dotted 1px;"/><br><br>
+			-->
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
 				// JavaScript for "Click to hide/show" button
@@ -196,6 +174,12 @@
 				</div>
 				<br>
 				-->
+				<div class="row">
+					<h4 class="text-center"> 2017 - 2018 Season: </h4>
+					<img src="img/posters/joywave_poster.png" title="Joywave" height="250">
+					<p><br></p>
+				</div>
+				<br>
 				<div class="row">
 					<h4 class="text-center"> 2016 - 2017 Season: </h4>
 					<img src="img/posters/neon%20indian.png" title="Neon Indian" height="250">
