--- a/index.html
+++ b/index.html
@@ -110,36 +110,61 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p>Stay tuned for our next show announcement!</p>
-			<hr style="border-top: dotted 1px;"/><br><br>
+			<!-- <p>Stay tuned for our next show announcement!</p> -->
 			<!--<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
-			<!--
-			<img height="50%" width="50%" src="img/posters/joywave_poster.png"/>
+			<!-- TODO: Duplicate this block for artist announcements and tickeets
+			<img height="50%" width="50%" src="img/posters/file_name.png"/>
 			<p>
-				<br>Star Course presents...<br>
-				<b>JOYWAVE</b><br>
+				<br>Star Course presents<br>
+				<b>Artist Name</b><br>
 				<br>
-				with opener <i><a href="https://www.facebook.com/stewartarp/" style="border-bottom:1px dashed #ccc;">Stewart Arp</a></i><br>
+				with opener <i><a href="artist info link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 				<br>
-				<b>Wednesday October 11th, 2017<br></b>
+				<b>Weekday Month Day, Year<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
-				Students $10 | Public $15<br>
+				Students $XX | Public $XX<br>
 				<br>
 				<b>Foellinger Auditorium</b><br>
 				709 S Mathews Ave<br>
 				Urbana, IL 61801<br>
 				<br>
-				Applicable online fees may apply.<br>
+				Additional online service fees apply.<br>
 				Foellinger Auditorium is reserved seating only.<br>
-				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=ST%3AILLINOIS%3AE17%3A1011%3AS05&linkID=illinois&shopperContext=ST&pc=&caller=&appCode=&groupCode=S&cgc=" 
+				<a href="student ticket link here" 
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1011%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc="
+				<a href="public ticket link here"
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<a href="https://www.facebook.com/events/1897318827185199" 
+				<a href="facebook event link here" 
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
-			<hr style="border-top: dotted 1px;"/><br><br>
 			-->
+			<img height="50%" width="50%" src="img/posters/wakaflocka_poster.jpg"/>
+			<p>
+				<br>Star Course presents<br>
+				<b>Waka Flocka Flame</b><br>
+				<br>
+				<!--with opener <i><a href="link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
+				<br>-->
+				<b>Saturday December 2, 2017<br></b>
+				Doors 6:30pm | Show 7:30pm<br>
+				<b>Students $15</b> | Public $22<br>
+				<br>
+				<b>Foellinger Auditorium</b><br>
+				709 S Mathews Ave<br>
+				Urbana, IL 61801<br>
+				<br>
+				Additional online service fees apply.<br>
+				Foellinger Auditorium is reserved seating only.<br>
+				<br>
+				<b>Tickets on sale Thursday November 2nd at 10am.</b><br>
+				<!--<a href="student ticket link here" 
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+				<a href="public ticket link here"
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+				<a href="facebook event link here" 
+					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+			</p>
+			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
 				// JavaScript for "Click to hide/show" button
