--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<!-- <p>Stay tuned for our next show announcement!</p>
-			<hr style="border-top: dotted 1px;"/><br><br>
-			<!--<p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
+			<!-- <p>Stay tuned for our next show announcement!</p> -->
+			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
 			<!-- TODO: Copy and paste this block for show announcements and tickets
 			<img height="50%" width="50%" src="img/posters/file_name.png"/>
 			<p>
@@ -144,8 +143,7 @@
 				<br>Star Course presents<br>
 				<b>Waka Flocka Flame</b><br>
 				<br>
-				<!--with opener <i><a href="link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
-				<br>-->
+				<!-- with opener <i><a href="link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br> -->
 				<b>Saturday December 2, 2017<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
 				<b>Students $15</b> | Public $22<br>
