--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			-->
-			<img height="50%" width="50%" src="img/posters/wakaflocka_poster.jpg"/>
+			<img height="50%" width="50%" src="img/posters/waka_poster.jpg"/>
 			<p>
 				<br>Star Course presents<br>
 				<b>Waka Flocka Flame</b><br>
