--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				<!-- with opener <i><a href="link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br> -->
 				<b>Saturday December 2, 2017<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
-				<b>Students $15</b> | Public $22<br>
+				Students $15 | Public $22<br>
 				<br>
 				<b>Foellinger Auditorium</b><br>
 				709 S Mathews Ave<br>
@@ -154,6 +154,10 @@
 				<br>
 				Additional online service fees apply.<br>
 				Foellinger Auditorium is reserved seating only.<br>
+				No backpacks, food, or drink allowed.<br>
+				Foellinger Auditorium is a non-smoking venue.<br>
+				<br>
+				Online ticket sales are now closed.<br>Tickets will be available for purchase at the door. 
 				<br>
 				<!-- <b>Tickets on sale Thursday November 2nd at 10am.</b><br> -->
 				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST" 
