--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<!-- <p>Stay tuned for our next show announcement!</p> -->
+			<p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p>
 			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
 			<!-- TODO: Copy and paste this block for show announcements and tickets
 			<img height="50%" width="50%" src="img/posters/file_name.png"/>
@@ -130,6 +130,8 @@
 				<br>
 				Additional online service fees apply.<br>
 				Foellinger Auditorium is reserved seating only.<br>
+				No backpacks, food, or drink allowed.<br>
+				Foellinger Auditorium is a non-smoking venue.<br>
 				<a href="student ticket link here" 
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="public ticket link here"
@@ -138,35 +140,6 @@
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			-->
-			<img height="50%" width="50%" src="img/posters/waka_poster.jpg"/>
-			<p>
-				<br>Star Course presents<br>
-				<b>Waka Flocka Flame</b><br>
-				<br>
-				<!-- with opener <i><a href="link" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br> -->
-				<b>Saturday December 2, 2017<br></b>
-				Doors 6:30pm | Show 7:30pm<br>
-				Students $15 | Public $22<br>
-				<br>
-				<b>Foellinger Auditorium</b><br>
-				709 S Mathews Ave<br>
-				Urbana, IL 61801<br>
-				<br>
-				Additional online service fees apply.<br>
-				Foellinger Auditorium is reserved seating only.<br>
-				No backpacks, food, or drink allowed.<br>
-				Foellinger Auditorium is a non-smoking venue.<br>
-				<br>
-				Online ticket sales are now closed.<br>Tickets will be available for purchase at the door. 
-				<br>
-				<!-- <b>Tickets on sale Thursday November 2nd at 10am.</b><br> -->
-				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST" 
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-				<a href="http://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A1202%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<a href="https://www.facebook.com/events/173183736594966" 
-					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
-			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
@@ -205,6 +178,7 @@
 				<div class="row">
 					<h4 class="text-center"> 2017 - 2018 Season: </h4>
 					<img src="img/posters/joywave_poster.png" title="Joywave" height="250">
+					<img src="img/posters/waka_poster.jpg" title="Waka Flocka Flame" height="250">
 					<p><br></p>
 				</div>
 				<br>
