--- a/index.html
+++ b/index.html
@@ -429,8 +429,9 @@
 <footer>
 <div class="container text-center">
 	<p class="credits">
-		Star Course, est. 1892<br>
-		University of Illinois at Urbana-Champaign<br><br>
+		Star Course Concert Committee<br>
+		University of Illinois at Urbana-Champaign<br>
+		Established 1892<br><br>
 		<a href="https://www.facebook.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Facebook</a> 
 			● <a href="https://twitter.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Twitter</a> 
 			● <a href="https://instagram.com/starcourseuiuc" target="_blank" style="border-bottom:1px dashed #ccc;">Instagram</a><br><br>
