--- a/history.html
+++ b/history.html
@@ -57,19 +57,19 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-				<a href="#intro">Home</a>
+				<a href="index.html">Home</a>
 			</li>
 			<li>
-				<a href="#events">Events</a>
+				<a href="index.html">Events</a>
 			</li>
 			<li>
-				<a href="#about">About</a>
+				<a href="index.html">About</a>
 			</li>
 			<li>
-				<a href="#staff">Staff</a>
+				<a href="index.html">Staff</a>
 			</li>
 			<li>
-				<a href="#contact">Contact</a>
+				<a href="index.html">Contact</a>
 			</li>
 			<li>
 				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
@@ -446,7 +446,7 @@
 			</p>
 			<p><b>2012-2013</b><br>
 				Wavves<br>
-			</p><br>
+			</p>
 			<p><b>2013-2014</b><br>
 				Casey James<br>
 				Baauer<br>
