--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 					<img src="img/posters/phantogram.jpg" title="Phantogram" height="250">
 					<p><br></p>
 				</div>
-				<a href="history.html#history"><button id="backButton" class="btnghost" onclick="history.html">
+				<a href="history.html#history"><button id="backButton" class="btnghost">
 						<span id="posterButtonSpan">See More History</span><i id="backButton" class="fa fa-caret-right fa-fw"></i>
 				</button></a>
 			</div>
