--- a/history.html
+++ b/history.html
@@ -57,19 +57,19 @@
 	<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 		<ul class="nav navbar-nav">
 			<li>
-				<a href="index.html">Home</a>
+				<a href="index.html#intro">Home</a>
 			</li>
 			<li>
-				<a href="index.html">Events</a>
+				<a href="index.html#events">Events</a>
 			</li>
 			<li>
-				<a href="index.html">About</a>
+				<a href="index.html#about">About</a>
 			</li>
 			<li>
-				<a href="index.html">Staff</a>
+				<a href="index.html#staff">Staff</a>
 			</li>
 			<li>
-				<a href="index.html">Contact</a>
+				<a href="index.html#contact">Contact</a>
 			</li>
 			<li>
 				<a href="https://www.facebook.com/starcourseuiuc" target="_blank"><i class="fa fa-facebook fa-fw"></i></a>
