--- a/history.html
+++ b/history.html
@@ -114,7 +114,10 @@
 				to contract, promote, and stage campus entertainment, Star Course brought its first orchestra 
 				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock, 
 				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular 
-				entertainment to the University and the C-U community. In 2017, Star Course celebrated 125 years of entertainment at UIUC.
+				entertainment to the University and the C-U community. In 2017, Star Course celebrated 125 years of entertainment at UIUC.</p>
+			<p class="text-left">If you were involved in Star Course back in the day and would like to share your experiences or any memorabilia,
+				please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>. 
+				We'd love to hear your story!
 			</p><br>
 			<p><b>1919</b><br>
 				Gilmore Military Band<br>
