--- a/history.html
+++ b/history.html
@@ -66,6 +66,9 @@
 				<a href="index.html#about">About</a>
 			</li>
 			<li>
+				<a href="#history">History</a>
+			</li>
+			<li>
 				<a href="index.html#staff">Staff</a>
 			</li>
 			<li>
@@ -115,7 +118,7 @@
 				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock, 
 				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular 
 				entertainment to the University and the C-U community. In 2017, Star Course celebrated 125 years of entertainment at UIUC.</p>
-			<p class="text-left">If you were involved in Star Course back in the day and would like to share your experiences or any memorabilia,
+			<p class="text-left">If you were involved in Star Course back in the day and want to share your experiences or any memorabilia, 
 				please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>. 
 				We'd love to hear your story!
 			</p><br>
