--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 				<a href="#about">About</a>
 			</li>
 			<li>
+				<a href="history.html#history">History</a>
+			</li>
+			<li>
 				<a href="#staff">Staff</a>
 			</li>
 			<li>
