--- a/history.html
+++ b/history.html
@@ -16,12 +16,12 @@
 		run by students for students at the University of Illinois at Urbana-Champaign. Members participate 
 		in all levels of event planning to contract, promote, and stage campus entertainment.">
 	<!-- meta name tags are for search engines -->
-	<meta name="title" content="Star Course UIUC">
+	<meta name="title" content="Star Course History">
 	<meta name="description" content="Star Course is a student-run concert promotion and production organization 
 		at the University of Illinois at Urbana-Champaign.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="star, course, uiuc, university of illinois, star course, starcourse, star course uiuc, starcourse uiuc, music, concert, concerts">
-	<title>Star Course UIUC</title>
+	<title>Star Course History</title>
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom CSS -->
