--- a/history.html
+++ b/history.html
@@ -117,9 +117,9 @@
 				to contract, promote, and stage campus entertainment, Star Course brought its first orchestra 
 				to the University in 1912. Throughout the past century the organization has broadened its scope to alternative, rock, 
 				comedy, R&B, hip-hop, jazz, and soul acts. Today Star Course focuses on providing a diverse selection of popular 
-				entertainment to the University and the C-U community. In 2017, Star Course celebrated 125 years of entertainment at UIUC.</p>
-			<p class="text-left">If you were involved in Star Course back in the day and want to share your experiences or any memorabilia, 
-				please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>. 
+				entertainment to the University and the C-U community. In 2017 Star Course celebrated 125 years of entertainment at UIUC.</p>
+			<p class="text-left">If you were involved in Star Course back in the day and want to share your experiences, have any memorabilia, 
+				or know any bands we've forgotten, please contact us at <i><a href="mailto:starcoursemusic@gmail.com" style="border-bottom:1px dashed #ccc;">starcoursemusic@gmail.com</a></i>. 
 				We'd love to hear your story!
 			</p><br>
 			<p><b>1919</b><br>
@@ -143,8 +143,17 @@
 				Pete Seeger<br>
 				Louis Armstrong<br>
 			</p>
-			<p><b>1958</b><br>
+			<p><b>1958-1961</b><br>
 				Louis Armstrong<br>
+				Andres Segovia<br>
+				Julian Bream<br>
+				Robert Shaw Chorale<br>
+				Leonard Warren<br>
+				Joseph Szigeti<br>
+				Eugene Ormandy<br> 
+				Leon Fleischer<br>
+				Glenn Gould<br>
+				Stan Kenton, June Christy and The Four Freshmen<br>
 			</p>
 			<p><b>1962</b><br>
 				Joan Baez<br>
@@ -246,7 +255,7 @@
 				Paul Carrack<br>
 				The English Beat<br>
 				Chick Corea & Touchstone<br>
-				OUr Daughters Wedding<br>
+				Our Daughters Wedding<br>
 				Rory Gallageher<br>
 				The Psychedelic Furs<br>
 			</p>
