updates to history

--- a/history.html
+++ b/history.html
@@ -461,12 +461,16 @@
 			</p>
 			<p><b>2012-2013</b><br>
 				Wavves<br>
+				Empires<br>
+				Easter (Spring Jam)<br>
 			</p>
 			<p><b>2013-2014</b><br>
 				Casey James<br>
 				Baauer<br>
 				Grouplove<br>
 				Phantogram<br>
+				Magic Man<br>
+				Twin Peaks (Spring Jam)<br>
 			</p>
 			<p><b>2014-2015</b><br>
 				Sky Ferreira<br>
