--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
 				<br>
 				<div class="row">		
 					<h4 class="text-center"> 2014 - 2015 Season: </h4>
-					<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" height="200">
-					<img src="img/posters/mac.jpg" title="Mac DeMarco" width="200">
-					<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" height="200">
-					<img src="img/posters/bo%20burnham.jpg" title="Bo Burnham" height="200">
-					<img src="img/posters/ilovemakonnen.jpg" title="ILOVEMAKONNEN" height="200">
+					<img src="img/posters/skyferreira.jpg" title="Sky Ferreira" height="250">
+					<img src="img/posters/hoodieallen.jpg" title="Hoodie Allen" height="250">
+					<img src="img/posters/bo%20burnham.jpg" title="Bo Burnham" height="250">
+					<img src="img/posters/ilovemakonnen.jpg" title="ILOVEMAKONNEN" height="250">
+					<img src="img/posters/mac.jpg" title="Mac DeMarco" width="250">
 					<p><br></p>
 				</div>
 				<br>
@@ -219,6 +219,7 @@
 					<img src="img/posters/baauer.jpg" title="Baauer" height="250">
 					<img src="img/posters/grouplove.jpg" title="Grouplove" height="250">
 					<img src="img/posters/phantogram.jpg" title="Phantogram" height="250">
+					<img src="img/posters/magic%20man.jpg" title="Magic Man" width="250">
 					<p><br></p>
 				</div>
 				<a href="history.html#history"><button id="backButton" class="btnghost">
