added more to history

--- a/history.html
+++ b/history.html
@@ -194,6 +194,10 @@
 			<p><b>1973-74</b><br>
 				The Beach Boys<br>
 				Grateful Dead<br>
+				Loggins and Messina<br>
+				James Taylor<br>
+				Joni Mitchell<br>
+				J. Geils<br>
 			</p>
 			<p><b>1974-75</b><br>
 				Gregg Allman<br>
