--- a/history.html
+++ b/history.html
@@ -501,6 +501,7 @@
 			<p><b>2017-2018</b><br>
 				Joywave<br>
 				Waka Flocka Flame<br>
+				STRFKR<br>
 			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
