--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	<div class="row">
 		<h2>UPCOMING EVENTS</h2>
 		<div class="col-lg-8 col-lg-offset-2">
-			<p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p>
+			<!-- <p>Thanks for a great fall semester. Stay tuned for our next show announcement!</p> -->
 			<!-- <p>Thanks for a great 2016 - 2017 season!<br>Find us at Quad Day on Sunday August 27th, 2017.<br></p> -->
 			<!-- TODO: Copy and paste this block for show announcements and tickets
 			<img height="50%" width="50%" src="img/posters/file_name.png"/>
@@ -123,7 +123,7 @@
 				<br>
 				with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 				<br>
-				<b>Weekday Month Dayy, Year<br></b>
+				<b>Weekday Month Day, Year<br></b>
 				Doors 6:30pm | Show 7:30pm<br>
 				Students $XX | Public $XX<br>
 				<br>
@@ -134,7 +134,7 @@
 				Additional online service fees apply.<br>
 				Foellinger Auditorium is reserved seating only.<br>
 				No backpacks, food, or drink allowed.<br>
-				Foellinger Auditorium is a non-smoking venue.<br>
+				Foellinger Auditorium is a non-smoking venue.<br><br>
 				<a href="student ticket link here" 
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="public ticket link here"
@@ -143,6 +143,32 @@
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			-->
+			<img height="50%" width="50%" src="img/posters/strfkr.jpg"/>
+			<p>
+				<br>Star Course presents<br>
+				<b>STRFKR</b><br>
+				<br>
+				<!-- with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
+				<br> -->
+				<b>Thursday April 5th, 2018<br></b>
+				Doors 6:30pm | Show 7:30pm<br>
+				Students $12 | Public $16<br>
+				<br>
+				<b>Foellinger Auditorium</b><br>
+				709 S Mathews Ave<br>
+				Urbana, IL 61801<br>
+				<br>
+				Additional online service fees apply.<br>
+				Foellinger Auditorium is reserved seating only.<br>
+				No backpacks, food, or drink allowed.<br>
+				Foellinger Auditorium is a non-smoking venue.<br><br>
+				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST" 
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
+				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A0405%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
+					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+				<!-- <a href="facebook event link here" 
+					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
 			<script>
@@ -182,6 +208,7 @@
 					<h4 class="text-center"> 2017 - 2018 Season: </h4>
 					<img src="img/posters/joywave_poster.png" title="Joywave" height="250">
 					<img src="img/posters/waka_poster.jpg" title="Waka Flocka Flame" height="250">
+					<img src="img/posters/strfkr.jpg" title="STRFKR" height="250">
 					<p><br></p>
 				</div>
 				<br>
