--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
 				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A0405%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
 					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
-				<!-- <a href="facebook event link here" 
-					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br> -->
+				<a href="https://www.facebook.com/events/150720065612759/" 
+					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			<hr style="border-top: dotted 1px;"/><br><br>
 			<h3>PREVIOUS EVENTS</h3>
