adding spring jam 2018

--- a/history.html
+++ b/history.html
@@ -502,6 +502,7 @@
 				Joywave<br>
 				Waka Flocka Flame<br>
 				STRFKR<br>
+				T-Pain (Spring Jam)<br>
 			</p>
 			<!-- TODO: Add artist names here:
 			<p><b>20XX-20XX</b><br>
