--- a/index.html
+++ b/index.html
@@ -143,29 +143,19 @@
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
 			-->
-			<img height="50%" width="50%" src="img/posters/strfkr.jpg"/>
+			<img height="75%" width="75%" src="img/posters/springjam2018.jpg"/>
 			<p>
-				<br>Star Course presents<br>
-				<b>STRFKR</b><br>
+				<br>Star Course, the Illini Union Board,<br>and the State Farm Center present<br>
+				<b>Spring Jam ft. T-Pain</b><br>
 				<br>
 				<!-- with opener <i><a href="link here" style="border-bottom:1px dashed #ccc;">Artist Name</a></i><br>
 				<br> -->
-				<b>Thursday April 5th, 2018<br></b>
-				Doors 6:30pm | Show 7:30pm<br>
-				Students $12 | Public $16<br>
-				<br>
-				<b>Foellinger Auditorium</b><br>
-				709 S Mathews Ave<br>
-				Urbana, IL 61801<br>
-				<br>
-				Additional online service fees apply.<br>
-				Foellinger Auditorium is reserved seating only.<br>
-				No backpacks, food, or drink allowed.<br>
-				Foellinger Auditorium is a non-smoking venue.<br><br>
-				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/EVExecMacro?linkID=illinois&evm=myac&msgCode=32000&shopperContext=ST&returnURL=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST&url=/cgi-bin/ncommerce3/SEGetGroupList%3FlinkID%3Dillinois%26groupCode%3D%26RSRC%3D%26RDAT%3D%26shopperContext%3DST" 
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Student Tickets</a><br>
-				<a href="https://ev11.evenue.net/cgi-bin/ncommerce3/SEGetEventInfo?ticketCode=GS%3AILLINOIS%3AE17%3A0405%3A&linkID=illinois&shopperContext=&pc=&caller=&appCode=&groupCode=CON&cgc"
-					 class="btnghost" target="_blank"><i class="fa fa-ticket"></i> Buy Public Tickets</a><br>
+				<b>Sunday April 29th, 2018<br></b>
+				on the Main Quad at 2pm<br><br>
+				Free Admission only with
+				UIUC Student I-Card,<br>
+				No exceptions
+				<br><br>
 				<a href="https://www.facebook.com/events/150720065612759/" 
 					 class="btnghost" target="_blank"><i class="fa fa-facebook"></i> Event Information</a><br>
 			</p>
@@ -174,16 +164,16 @@
 			<script>
 				// JavaScript for "Click to hide/show" button
 				function showPosters() {
-	   			var x = document.getElementById('posters');
-    			if (x.style.display == 'none') {	
-        		x.style.display = 'block';
+					var x = document.getElementById('posters');
+					if (x.style.display == 'none') {	
+						x.style.display = 'block';
 						document.getElementById("posterButtonI").className = "fa fa-caret-up fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to hide";
-    			} else {
-        		x.style.display = 'none';
+					} else {
+						x.style.display = 'none';
 						document.getElementById("posterButtonI").className = "fa fa-caret-down fa-fw";
 						document.getElementById("posterButtonSpan").textContent = "Click to show";
-    			}
+					}
 				}
 			</script>
 			<p>
